Improved tests. Minor fixes.

--- a/test/PrjTestMcSimpleProp.lpi
+++ b/test/PrjTestMcSimpleProp.lpi
@@ -5,13 +5,14 @@
     <PathDelim Value="\"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
-      <Title Value="prjtestmcsimpleprop"/>
+      <Title Value="PrjTestMcSimpleProp"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <XPManifest>
         <DpiAware Value="True"/>
       </XPManifest>
+      <Icon Value="0"/>
     </General>
     <BuildModes>
       <Item Name="Default" Default="True"/>
